[tool.poetry]
name = "hexlet-flask"
version = "0.1.0"
description = ""
authors = ["zhukata <zhukata@gmail.com>"]
readme = "README.md"
packages = [
  { include = "hexlet_flask" },
]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
